--- a/a2/Index.html
+++ b/a2/Index.html
@@ -27,5 +27,6 @@
 		<!-- link to go to the next page -->
 		<a href="Introduction.html">1</a>
 		<a href="little_prince.html">2</a>
+		<a href="Calculator.html">2</a>
 	</body>
 </html>
